Fix the style on small screens

--- a/sass/custom/layout.scss
+++ b/sass/custom/layout.scss
@@ -199,6 +199,16 @@ footer {
 @media print, screen and (max-width: 80em) {
   .page div.principal {
     width: 85%;
+
+    &.principal--home {
+      width: 85%;
+    }
+  }
+
+  .menu {
+    &.top-left-menu {
+      margin-bottom: 15px;
+    }
   }
 
   aside.float-right {
